update stories and grammar

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </div>
       <div class="card" id="event_13">
         <h3>Seven Brides in Mormon Country</h3>
-        <p>2006 &mdash; performed in &#8220;Seven Brides for Seven Brothers,&#8221; &mdash;her first musical
+        <p>2006 &mdash; performed in &#8220;Seven Brides for Seven Brothers,&#8221; &mdash; her first musical
           for the St. George Musical Theater. This was the beginning
         of 2 years of regular performances for her. She also
         started teaching Dance at a local studio, beginning 15+ years of teaching.</p>
@@ -160,16 +160,17 @@
         </figure>
         <figure>
           <img class="img-road-trip" src="new_assets/st_george.jpg"></img>
-          <figcaption class="flush-left">Definitely the cute one on the left!</figcaption>
+          <figcaption class="flush-left">Definitely the cute one on the left! This performance was part of the St. George Dance Company, a break-away group of dances who formed
+          their own dance company.  A lot of them were mothers.  In fact, Diana herself had just barely found out she was pregnant with Katherine at the time.</figcaption>
         </figure>
       </div>
       <div class="card" id="event_14">
-        <h3>Dixie Chic!</h3>
+        <h3>Dixie Chick!</h3>
         <p>2007 &mdash; attended Dixie State College in St. George, UT, for two semesters.</p>
       </div>
       <div class="card" id="event_15">
         <h3>Student of the Year (was there ever any question?)</h3>
-        <p>She won the &#8220;Student of the Year&#8221; award in the Dance Department.</p>
+        <p>She won the &#8220;Student of the Year&#8221; award in the Dance Department. Criteria for the award included leadership, attitude, timeliness, and demonstrated improvement.</p>
       </div>
       <div class="card" id="event_16">
         <h3>Marriage</h3>
