fixes spacing for caption

--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
       </div>
       <div class="card" id="event_19">
         <h3>Second Child</h3>
-        <p>2013 &mdash; gave birth to her daughter.</p>
-        <figure class="figure-alec">
+        <p>2013 &mdash; gave birth to her daughter, Katherine.</p>
+        <figure class="figure-alec figure-katherine">
           <img class="img-baby-katherine" src="new_assets/katherine.jpg"></img>
           <figcaption class="flush-right flush-right-katherine">An adoring mama looks down on baby Katherine while a loving  brother looks on.  Katherine was born in March, 2013 in St. George, UT.</figcaption>
         </figure>
