--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
       <div class="card" id="event_21">
         <h3>Pathways</h3>
         <p>2018 &mdash; attended Pathways at BYU-Idaho. Began one of her favorite jobs working
-          at the Jordan River Temple while simultaneously teaching at a local Ballet studio.</p>
+          at the Jordan River Temple cafeteria while simultaneously teaching at a local Ballet studio.</p>
       </div>
       <div class="card" id="event_22">
         <h3>LDS Business College</h3>
@@ -328,8 +328,8 @@
                     type="video/mp4">
             Sorry, your browser doesn&#8217;t support embedded videos.
         </video>
-        <figcaption>Animated COVID-19 virus with a dark background.
-          Animation provided by Centers of Disease Control (CDC), &ldquo;https://www.cdc.gov/media/b_roll.html&rdquo; Used under public domain.</figcaption>
+        <figcaption>COVID-19 virus with a dark background.
+          Image provided by Centers of Disease Control (CDC), &ldquo;https://www.cdc.gov/media/b_roll.html&rdquo; Used under public domain.</figcaption>
       </figure>
       </div>
       <div class="card" id="event_32">
