fixes content and grammar

--- a/index.html
+++ b/index.html
@@ -266,11 +266,11 @@
       </div>
       <div class="card" id="event_22">
         <h3>LDS Business College</h3>
-        <p>2019 &mdash; attended LDS Business College for 3 semesters.</p>
+        <p>2019 &mdash; attended LDS Business College for 3 semesters.  This is when she first got interested in medicine while studying to become a Medical Assistant.</p>
       </div>
       <div class="card" id="event_23">
         <h3>New Love</h3>
-        <p>2019 &mdash; meets the love of her life.</p>
+        <p>2019 &mdash; meets the love of her life.  It would be the very first and very last time she attended the singles ward.</p>
         <figure>
           <img class="img-road-trip" src="new_assets/vegas_3849.jpg"></img>
           <figcaption></figcaption>
@@ -284,8 +284,9 @@
       <div class="card" id="event_25">
         <h3>Marriage</h3>
         <p>2019 &mdash; just two days short of two months after meeting,
-          she and Trevor get married in the bishop&#8217;s office with only her,
-          Trevor, the bishop, and Alec and Katherine attending.</p>
+          Diana and Trevor get married in the Bishop Anderson&#8217;s office with only her,
+          Trevor, the bishop, and Alec and Katherine attending.  And still to this day Alec and Katherine still don't believe it was a real wedding.  &ldquo; Because who gets
+        married in a bishop's office? &rdquo;</p>
 
       </div>
       <div class="card" id="event_26">
@@ -301,7 +302,7 @@
         </figure>
       </div>
       <div class="card" id="event_27">
-        <h3>Westward HO!</h3>
+        <h3>Westward HO!  &mdash;ish</h3>
         <p>2019 &mdash; moved to West Jordan, UT.</p>
       </div>
       <div class="card" id="event_28">
@@ -315,12 +316,12 @@
       </div>
       <div class="card" id="event_30">
         <h3>A Room with a View</h3>
-        <p>2020 &mdash; gives up her lovely 3<super>rd</super> story apartment (with a glorious view of the Wasatch mountains) for a basement apartment with cheaper rent and larger space.</p>
+        <p>2020 &mdash; gives up her lovely 3<sup>rd</sup> story apartment (with a glorious view of the Wasatch mountains) for a basement apartment with cheaper rent and larger space.</p>
       </div>
       <div class="card" id="event_31">
         <h3>Pandemic</h3>
-        <p>2020 &mdash; the global COVID-19 pandemic forces all schooling to move to a virtual environment.  This cuts Diana off from her professors while simultaneously forces her to become a
-          home school teacher for Alec and Katherine. Eventually, two of her step-daughters would contract it, then her own daughter then herself and Trevor, and finally her Mother-in-law,
+        <p>2020 &mdash; the global COVID-19 pandemic forces all schooling to move to a virtual environment.  This cuts Diana off from her professors while simultaneously forcing her to become a
+          home school teacher for Alec and Katherine. Eventually, two of her step-daughters would contract it, then her own daughter, then herself and Trevor, and finally her Mother-in-law,
           creating a whole month of quarantining.</p>
         <figure>
           <video class="covid" autoplay muted playsinline loop poster="new_assets/23311.jpg">
@@ -334,7 +335,7 @@
       </div>
       <div class="card" id="event_32">
         <h3>You&#8217;re Prego?!?!</h3>
-        <p>2020 &mdash; finds out that 5 months into her marriage, amidst adjusting to a new family,
+        <p>2020 &mdash; 5 months into her marriage finds out that, amidst adjusting to a new family,
           she will be bringing child number 6 into her your&#8217;s-mine-and-ours family.</p>
       </div>
       <div class="card" id="event_33">
@@ -387,17 +388,16 @@
       </div>
       <div class="card" id="event_38">
         <h3>Sealed with a kiss!</h3>
-        <p>2020 &mdash; COVID restrictions, finally letting these two sweet lovebirds have the chance to be sealed in the Jordan River Temple.
-          COVID restrictions were such that only one family could be in the temple at a time, leaving the temple a virtual ghost town
+        <p>2020 &mdash; COVID restrictions lifted, finally letting these two sweet lovebirds have the chance to be sealed in the Jordan River Temple.
+          Restrictions only allowed one family in the temple at a time, leaving the temple a virtual ghost town
           and letting them have a wonderful, private experience in the celestial room.
         </p>
         <figure>
           <img class="img-reception" src="new_assets/cea_1781.jpg"></img>
-          <figcaption class="fig-caption-31"></figcaption>
+          <figcaption class="flush-right">Brooklyn was also able to attend.  A dear friend of Diana&#8217;s watched her during the ceremony, which was a good thing
+            because she cried every minute of the whole process until they brought her in to see her mommy. And then she was as quiet as a church mouse.
+            Also attending were Brian and Christina and Genesis, Maya, and Skylar.</figcaption>
         </figure>
-        <p> Brooklyn was also able to attend.  A dear friend of Diana&#8217;s watched her during the ceremony, which was a good thing
-          because she cried every minute of the whole process until they brought her in to see her mommy. And then she was as quiet as a church mouse.
-          Also attending were Brian and Christina and Genesis, Maya, and Skylar.</p>
       </div>
       <div class="card" id="event_39">
         <h3>Finally, a Real Honeymoon</h3>
