--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
       </div>
       <div class="card" id="event_39">
         <h3>Finally, a Real Honeymoon</h3>
-        <p>2021 &mdash; almost two years after getting married finally goes on a honeymoon to Colorado.  It would be an fantastic time of friendship, bonding, adventure, scary heights,
+        <p>2021 &mdash; almost two years after getting married, Diana finally goes on a honeymoon to Colorado.  It would be an fantastic time of friendship, bonding, adventure, scary heights,
           fabulous food, a handful of miracles, and one disastrous mistake that turned out to  be the best thing that could have happened.</p>
         <figure>
           <img class="scans" src="new_assets/miracles_front.jpeg"></img>
@@ -426,7 +426,7 @@
         <p>2021 &mdash; remains strong during the loss of her father-in-law, with whom she had a very close relationship.</p>
       </div>
       <div class="card" id="event_42">
-        <h3>A Might Hero and an Honest Worker</h3>
+        <h3>A Mighty Hero and an Honest Worker</h3>
         <p>2021 &mdash; Finishes the last prerequisite for nursing school.  To some, this may seem like a mundane accomplishment. Still,
           a multitude of additional, sometimes even extraordinary circumstances demonstrate why this is more than just a few mere classes.
           Helen Keller once said: </p>
