adds three new photos, captions, and styling

--- a/index.html
+++ b/index.html
@@ -482,8 +482,20 @@
           There is no other person I would rather make this journey with.  You are truly the kindest, most amazing person I have ever known.  I love you Sweetheart, and I can't wait
         to spend eternity with you!</p>
         <figure>
+          <img class="img-balance-rock" src="new_assets/whole_family.jpg"></img>
+          <figcaption class="flush-right">Diana poses in a family photo will her mother and all her siblings.</figcaption>
+        </figure>
+        <figure>
+          <img class="img-balance-rock" src="new_assets/Four_Young_Ladies.jpg"></img>
+          <figcaption class="flush-right">A three generation photo with RuthAnne, Diana, Katherine, and Brooklyn.</figcaption>
+        </figure>
+        <figure>
+          <img class="img-balance-rock" src="new_assets/red_sweater_couch.jpg"></img>
+          <figcaption class="flush-right">Diana takes a break from a family reunion to pose on a couch!  Actually, Trevor made her do it.</figcaption>
+        </figure>
+        <figure>
           <img class="img-balance-rock" src="new_assets/balance_rock_4198.jpg"></img>
-          <figcaption></figcaption>
+          <figcaption class="flush-right">Diana does an arabesque in front of Balance Rock, Idaho.</figcaption>
         </figure>
       </div>
       <div class="card">
