fixes grammar and hyperlink colors

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         <p>Presidential Elections would be historic in seeing &ldquo;the first woman, the first Black American, and the first South Asian American to be elected Vice President,&rdquo;
           (<a href="https://www.whitehouse.gov/administration/vice-president-harris/">Kamala Harris: The Vice President. A career for the people &mdash;
             breaking barriers and fighting for working families. The White House</a>)
-          but would also lead to a near coup d&#8217;é·tat as rioters ransacked the nation's capital</p>
+          but would also lead to a near coup d&#8217;é·tat as rioters ransacked the nation's capital.</p>
       </div>
       <div class="card" id="event_37">
         <h3>Child Number 6!</h3>
@@ -499,7 +499,7 @@
         </figure>
       </div>
       <div class="card">
-        <p class="more-info">For more information see her <a id="tribute-link" href="https://enpointeballet.net/collections/our-instructors/products/diana-rapp" target="_blank">bio</a>.
+        <p class="more-info">For more information see Diana's <a id="tribute-link" href="https://enpointeballet.net/collections/our-instructors/products/diana-rapp" target="_blank">bio</a>.
         </p>
         <p id="last-updated"></p>
       </div>
