--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </svg>
   </div>
   <div id="img-div" class="img-div">
-    <img id="image" src="new_assets/princess_di_bw.jpg" />
+    <img id="image" src="new_assets/princess_di_bw.jpg" alt="Portrait of Diana"/>
     <caption id="img-caption" class="img-caption">Diana holds her sweet newborn baby. She is known to all as a diligent and doting Mother.</caption>
   </div>
   <div class="container">
@@ -89,7 +89,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h3>Early Life</h3>
         <p>1990 &mdash; Diana&#8217;s family moved to Las Vegas, Nevada, where she grew up.</p>
         <div class="vegas">
-          <img src="new_assets/las_vegas_city_map_panoramic_graphic_art.jpg" class="img-vegas">
+          <img src="new_assets/las_vegas_city_map_panoramic_graphic_art.jpg" class="img-vegas" alt="decorative map of Las Vegas, Nevada">
         </div>
       </div>
       <div class="card" id="event_5">
@@ -150,7 +150,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           They were always fun to work with.  They were kind of like a big brother and sister to us.&rdquo;
           Diana was also able to work with Stacey Tookey, and Christina, her sister, was able to work with Peter Chu.</p>
         <figure>
-          <img class="bengal" src="new_assets/default_news.png"></img>
+          <img class="bengal" src="new_assets/default_news.png" alt="picture of Bonanza Highschool mascot, a bengal tiger"></img>
           <figcaption></figcaption>
         </figure>
       </div>
@@ -167,11 +167,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         of 2 years of regular performances for her. She also
         started teaching Dance at a local studio, beginning 15+ years of teaching.</p>
         <figure >
-          <img class="img-seven-brides" src="new_assets/seven_brides.jpg"></img>
+          <img class="img-seven-brides" src="new_assets/seven_brides.jpg" alt="Diana performing in Seven Brides for Seven Brothers"></img>
           <figcaption class="flush-left">I think she's the cute one in the middle! Can you believe she's the oldest in the group (20-years-old)?</figcaption>
         </figure>
         <figure>
-          <img class="img-road-trip" src="new_assets/st_george.jpg"></img>
+          <img class="img-road-trip" src="new_assets/st_george.jpg"  alt="Picture of Diana leaping in a dance performance"></img>
           <figcaption class="flush-left">Definitely the cute one on the left! This performance was part of the St. George Dance Company, a break-away group of dancers who formed
           their own dance company.  A lot of them were Mothers.  In fact, Diana herself had just barely found out she was pregnant with Katherine at the time.</figcaption>
         </figure>
@@ -192,16 +192,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h3>Gave birth to her first son.</h3>
         <p>2008 &mdash; A beautiful soul comes into the world.  And his name shall be &hellip; Alec!</p>
         <figure class="figure-alec">
-          <img src="new_assets/alec_toddler.jpg" class="img-alec"></img>
+          <img src="new_assets/alec_toddler.jpg" class="img-alec" alt="Picture of Alec as a toddler" loading="lazy"></img>
           <figcaption class="fig-caption-11 flush-right">Picture of Alec when he was 2-years-old.  Alec has been a great defender to his Mom and younger siblings.
             And he has a very, very special place in his Mother's heart.  You can see he's got his Mother's chin and her curly hair in this picture!</figcaption>
         </figure>
         <figure class="figure-alec alec-middle">
-          <img src="new_assets/DSC_1772.jpg" class="img-alec"></img>
+          <img src="new_assets/DSC_1772.jpg" class="img-alec" alt="close-up picture of Alec smiling" loading="lazy"></img>
           <figcaption class="fig-caption-11 flush-right">Alec smiles after winning a foot race with all his sisters across the full distance of Snowville Park.</figcaption>
         </figure>
         <figure class="figure-alec">
-          <img src="new_assets/DSC_1201.jpg" class="img-alec"></img>
+          <img src="new_assets/DSC_1201.jpg" class="img-alec" alt="picture of Alec with Brooklyn in his lap showing her a pumpkin" loading="lazy"></img>
           <figcaption class="fig-caption-11 flush-right">Alec introduces his youngest sibling, Brooklyn, to pumpkins for the first time.  Alec has been an amazing older brother to an innumberable amount of little sisters!  Photo was taken at The Kinlands (Formerly Petersen Family Farms), October, 2021.</figcaption>
         </figure>
         </div>
@@ -211,21 +211,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           the second-longest-running show on Broadway, CATS, as performed at the
           Tuacahn Theater in St. George, UT.</p>
         <figure class="">
-          <img src="new_assets/cats_circle.jpg"></img>
+          <img src="new_assets/cats_circle.jpg" alt="picture of Diana in Cats, fawning over the Rum Tum Tugger character" loading="lazy"></img>
           <figcaption class="flush-right">Diana gets googly-eyed over Rum Tum Tugger.</figcaption>
         </figure>
         <figure class="">
-          <img src="new_assets/cats_backstage.jpg" id="tuachan_group_selfie"></img>
+          <img src="new_assets/cats_backstage.jpg" id="tuachan_group_selfie" alt="dressing room picture of Diana with her friends all dressed up in their costumes for Cats" loading="lazy"></img>
           <figcaption class="flush-right">Diana was the only cast member to be dressed in a velvet unitard.  Everyone else got a lighter, cooler spandex outfit.
             &ldquo;It was horrible because we were dancing outside in the summer &mdash; SUMMER &mdash; <em>ST. GEORGE SUMMER</em> &mdash; heat,&rdquo; Diana explained.</figcaption>
         </figure>
         <figure class="">
-          <img src="new_assets/cats_en_pointe.jpg"></img>
+          <img src="new_assets/cats_en_pointe.jpg" alt="picture of Diana with legs and arms outstretched in mid leap during a performance of CATS" loading="lazy"></img>
           <figcaption class="flush-right">This picture was taken during the hardest dance routine in the whole show.  It was called the &rsquo;Jellicle Ball.&lsquo; &ldquo;It was a seven-minute long dance
           which is a long time to  be doing a fast, technical, cardio dance routine, &rdquo; &mdash; Diana.</figcaption>
         </figure>
         <figure class="">
-          <img src="new_assets/cats_selfie.jpg"></img>
+          <img src="new_assets/cats_selfie.jpg" alt="close up of Diana's makeup during CATS" loading="lazy"></img>
           <figcaption class="flush-right">The face painting had to be done by hand by each cast member.  It took about an hour to complete due to the detailed shading and the very detailed drawing.
           The shading was accomplished by putting on a base layer of white, then the brown, and then finally using a makeup sponge to lightly blend the brown into the white.</figcaption>
         </figure>
@@ -234,11 +234,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h3>Second Child</h3>
         <p>2013 &mdash; gave birth to her daughter, Katherine.</p>
         <figure class="figure-alec figure-katherine">
-          <img class="img-baby-katherine" src="new_assets/katherine.jpg"></img>
-          <figcaption class="flush-right flush-right-katherine">An adoring mama looks down on baby Katherine while a loving  brother looks on.  Katherine was born in March 2013 in St. George, UT.</figcaption>
+          <img class="img-baby-katherine" src="new_assets/katherine.jpg" alt="Diana looks down at Katherine shortly after giving birth" loading="lazy"></img>
+          <figcaption class="flush-right flush-right-katherine">An adoring mama looks down on baby Katherine while a loving brother looks on.  Katherine was born in March 2013 in St. George, UT.</figcaption>
         </figure>
         <figure class="figure-alec">
-          <img class="img-school-katherine" src="new_assets/katherine_6249.jpg"></img>
+          <img class="img-school-katherine" src="new_assets/katherine_6249.jpg" alt="close up of Katherine smiling" loading="lazy"></img>
           <figcaption class="flush-right flush-right-katherine fig-caption-11">Anyone who knows Katherine knows she's as sassy as she is sweet.  Some of our favorite quotes for her: <br><br>
             &ldquo;Can we not get a Spanish Fork name?&rdquo;<br>
             &mdash; when asked what we should name Brooklyn<br>
@@ -262,7 +262,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </figcaption>
         </figure>
         <figure class="figure-alec">
-          <img class="img-kat-chair" src="new_assets/katherine_end_game_photo.jpg"></img>
+          <img class="img-kat-chair" src="new_assets/katherine_end_game_photo.jpg" alt="Katherine watching T.V. in a blanket" loading="lazy"></img>
           <figcaption class="flush-right flush-right-katherine">Katherine watches a movie with one of her favorite blankets in the rocking chair that Diana rocked her to sleep in so many times as a child.</figcaption>
         </figure>
       </div>
@@ -283,7 +283,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h3>New Love</h3>
         <p>2019 &mdash; meets the love of her life.  It would be the very first and very last time she attended the singles ward.</p>
         <figure>
-          <img class="img-road-trip" src="new_assets/vegas_3849.jpg"></img>
+          <img class="img-road-trip" src="new_assets/vegas_3849.jpg" alt="Diana and Trevor selfie on way to Vegas" loading="lazy"></img>
           <figcaption></figcaption>
         </figure>
       </div>
@@ -305,7 +305,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <p>2019 &mdash; As part of marrying Trevor, Diana would lovingly and gracefully take on the responsibility and title of &ldquo;bonus-mom&rdquo;
           to three beautiful girls who would quickly come to love her kind, fun, and ever-patient influence on them.</p>
         <figure>
-          <img class="img-proclamation" src="new_assets/family_proclamation.png"></img>
+          <img class="img-proclamation" src="new_assets/family_proclamation.png" alt="image of The Family: a Proclamation to the World" loading="lazy"></img>
           <figcaption class="fig-caption-20">The Family: A Proclamation To The World states that 	&ldquo; marriage  between a man and a woman is ordained of God
             and that the family is central to the Creator&#8217;s plan for the eternal destiny of his children.&rdquo;
             And boy, were we excited to become a real, eternal family.  Plus, that way, Alec and Katherine would
@@ -380,20 +380,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h3>Child Number 6!</h3>
         <p>2020 &mdash; Diana gives birth to a beautiful baby girl. To Trevor's dismay and to everyone else's delight, she ixnays's naming her Khmer and instead decides on Brooklyn Kennedy Rapp!</p>
         <figure class="figure-alec">
-          <img class="img-hospital" src="new_assets/brooklynn_on_mama.jpg"></img>
+          <img class="img-hospital" src="new_assets/brooklynn_on_mama.jpg" alt="photo of Brooklyn sleeping on Diana's chest in the hospital" loading="lazy"></img>
           <figcaption class="flush-right flush-right-katherine">Brooklyn begins the first of many naps on her favorite pillow.  From the time I got married to Diana, I said,
             &ldquo;we need to have a baby, and she needs to have your smile!&rdquo; God was merciful and I got both.  Though painful for Diana, her labor was the shortest I had ever seen.
           Three pushes and she was out.  P.S. she doesn't have any more hair on her head 14 months later than she does in that picture!</figcaption>
         </figure>
         <figure class="figure-alec">
-          <img class="img-baby-brooklyn" src="new_assets/diana_brooklyn_honeymoon.jpg"></img>
+          <img class="img-baby-brooklyn" src="new_assets/diana_brooklyn_honeymoon.jpg" alt="picture of Diana and Brooklyn smiling on the bed at the hotel on the honeymoon" loading="lazy"></img>
           <figcaption class="flush-right flush-right-katherine" >With COVID restricting so many things, we got a little bit out of order.  We got married, but couldn&rsquo;t get sealed until a year later.  By that time we had
           the &ldquo;Little.&rdquo; Also, with the combination of lack of money, travel restrictions, and getting called up on COVID orders, we weren't able to have a honeymoon until after we got sealed.
         So by the time we could get a honeymoon we had a third wheel!  This meant leaving insanely early (4 A.M.) in the morning to start our 9 hour drive to Colorado.  But she did great!
         And she was the cutest third wheel we could ever get!  Here we are at our last stop in Denver before we accidentally ended up in Star Valley, Wyoming.  Oops!  That was my fault.</figcaption>
         </figure>
         <figure class="figure-alec">
-          <img class="img-baby-brooklyn-valentines" src="new_assets/sweet_valentine_sunshine.jpg"></img>
+          <img class="img-baby-brooklyn-valentines" src="new_assets/sweet_valentine_sunshine.jpg" alt="sun cuts through blinds creating shadow play on Diana and Brooklyn as they sit on the couch" loading="lazy"></img>
           <figcaption class="flush-right flush-right-katherine" >This was Brooklyn&rsquo;s first Valentine&rsquo;s day. And she couldn&rsquo;t have a more adoring Valentine than her Mama!  </figcaption>
         </figure>
       </div>
@@ -404,7 +404,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           and letting them have a wonderful, private experience in the celestial room.
         </p>
         <figure>
-          <img class="img-reception" src="new_assets/cea_1781.jpg"></img>
+          <img class="img-reception" src="new_assets/cea_1781.jpg" alt="Trevor and Diana at their wedding reception" loading="lazy"></img>
           <figcaption class="flush-right">Brooklyn was also able to attend.  A dear friend of Diana&#8217;s watched her during the ceremony, which was a good thing
             because she cried every minute of the whole process until they brought her in to see her mommy. And then she was as quiet as a church mouse.
             Also attending were Brian and Christina and Genesis, Maya, and Skylar.</figcaption>
@@ -415,13 +415,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <p>2021 &mdash; almost two years after getting married, Diana finally goes on a honeymoon to Colorado.  It would be an fantastic time of friendship, bonding, adventure, scary heights,
           fabulous food, a handful of miracles, and one disastrous mistake that turned out to  be the best thing that could have happened.</p>
         <figure>
-          <img class="scans" src="new_assets/miracles_front.jpeg"></img>
+          <img class="scans" src="new_assets/miracles_front.jpeg" alt="front side of card" loading="lazy"></img>
           <figcaption class="flush-right">I bought this card for Diana as an afterthought at the grocery store. It became an impromptu scratchpad for us to record all the beautiful
             memories we had!</figcaption>
         </figure>
 
         <figure>
-          <img class="scans" src="new_assets/miracles_back.jpeg"></img>
+          <img class="scans" src="new_assets/miracles_back.jpeg" alt="back side of card" loading="lazy"></img>
           <figcaption></figcaption>
         </figure>
       </div>
@@ -493,19 +493,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           There is no other person I would rather make this journey with.  You are truly the kindest, most amazing person I have ever known.  I love you Sweetheart, and I can't wait
         to spend eternity with you!</p>
         <figure>
-          <img class="img-balance-rock" src="new_assets/whole_family.jpg"></img>
+          <img class="img-balance-rock" src="new_assets/whole_family.jpg" alt="Diana, her mother, and all her siblings" loading="lazy"></img>
           <figcaption class="flush-right">Diana poses in a family photo will her mother and all her siblings.</figcaption>
         </figure>
         <figure>
-          <img class="img-balance-rock" src="new_assets/Four_Young_Ladies.jpg"></img>
+          <img class="img-balance-rock" src="new_assets/Four_Young_Ladies.jpg" alt="Diana, RuthAnne, Brooklyn and Katherine" loading="lazy"></img>
           <figcaption class="flush-right">A three generation photo with RuthAnne, Diana, Katherine, and Brooklyn.</figcaption>
         </figure>
         <figure>
-          <img class="img-balance-rock" src="new_assets/red_sweater_couch.jpg"></img>
+          <img class="img-balance-rock" src="new_assets/red_sweater_couch.jpg" alt="Diana lays down dramatically on couch in red sweater" loading="lazy"></img>
           <figcaption class="flush-right">Diana takes a break from a family reunion to pose on a couch!  Actually, Trevor made her do it.</figcaption>
         </figure>
         <figure>
-          <img class="img-balance-rock" src="new_assets/balance_rock_4198.jpg"></img>
+          <img class="img-balance-rock" src="new_assets/balance_rock_4198.jpg" alt="Diana does an arabesque at Balance Rock" loading="lazy"></img>
           <figcaption class="flush-right">Diana does an arabesque in front of Balance Rock, Idaho.</figcaption>
         </figure>
       </div>
