change daughters in law to step daughters

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-P4XZXPH');</script>
 <!-- End Google Tag Manager -->
   <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Monda" rel="stylesheet">
+  <link rel="stylesheet" media="screen and (min-device-width: 800px)" href="800.css" />
   <link href="css/styles.css" rel="stylesheet">
 </head>
 
@@ -468,7 +469,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <p class="second-paragraph">During this time, she did one of the most extraordinary things a person could do.
           She conceived a life.  Spent 9 months letting that life grow a little body inside her own.  Gave birth so that life could become a person. And then held that person every night while at the computer trying to do homework one-handed.</p>
         <p class="second-paragraph">But the aggregate included even more examples of faith and sacrifice.</p>
-        <p class="second-paragraph">You see, she also spent numerous weekends traveling to Idaho to see her daughters-in-law.  This meant 8 hours in the car, which she couldn't use to study.  Which many people
+        <p class="second-paragraph">You see, she also spent numerous weekends traveling to Idaho to see her step-daughters.  This meant 8 hours in the car, which she couldn't use to study.  Which many people
           would have used as an excuse to study on Sunday.  Not her.  During all of this, she <em>NEVER, NEVER, NEVER</em> once studied on a Sunday. She simply said, &ldquo;I've never done it before,
           and I just don't feel right about it.&rdquo;</p>
         <p class="second-paragraph">Was this all of the singular, extraordinary circumstances that formed such an amazing aggregate?</p>
