adds css for mobile

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-P4XZXPH');</script>
 <!-- End Google Tag Manager -->
   <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Monda" rel="stylesheet">
-  <link rel="stylesheet" media="screen and (min-device-width: 800px)" href="800.css" />
-  <link href="css/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/mobile.css" />
+  <link href="css/styles.css" media="screen and (min-device-width: 800px)" rel="stylesheet">
 </head>
 
 <body id="main" class="main">
