--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       <div class="card" id="event_5">
         <h3>Ahhh&#8230;it's Nahjee</h3>
-        <p>Diana welcomed a new baby brother (his real name is Jason).  She loved to pretend he was her own baby.  Diana came up with the nickname Nahjee and often called out for Josh by saying, &lsquo;NAAHHHH JEEEEEEE!&rsquo; </p>
+        <p>Diana welcomed a new baby brother (his real name is Jason).  She loved to pretend he was her own baby.  Diana came up with the nickname Nahjee and often called out for Jason by saying, &lsquo;NAAHHHH JEEEEEEE!&rsquo; </p>
       </div>
       <div class="card" id="event_6">
         <h3>Not a Mean Bone in Her Body</h3>
